OCI-916 fix speed optimization bug feedback (#356)
* OCI-916 optimization feedback

* OCI-916 fix small issue with arrow icon overlapped css

--- a/styles/sections/announcement-bar.scss
+++ b/styles/sections/announcement-bar.scss
@@ -1,4 +1,10 @@
 #shopify-section-announcement-bar {
+  [type=button], [type=reset], [type=submit], button {
+    -webkit-appearance: button;
+    background-color: transparent;
+    background-image: none;
+  }
+
   .announcement-bar {
     height: 70px;
     width: 100%;
